--- a/css/styles.css
+++ b/css/styles.css
@@ -206,18 +206,122 @@ img {
     letter-spacing: 0.12px;
 }
 
+
+/* --- Main Container--- */
+
+.main-container {
+  padding-top: 41px ;
+}
+.greetings {
+  color: #000;
+  font-size: 24px;
+  line-height: normal;
+  margin-bottom: 51px;
+}
+
+.main-wrap {
+  background: #FFF;
+  box-shadow: 0 10px 60px rgba(226,236,249,0.5);
+  border-radius: 26px;
+  max-width: 968px;
+  padding: 30px 44px 40px 38px;
+}
+.table-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.customers-title {
+  color: #000;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.22px;
+}
+.table-name-wrap{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 7px;
+}
+.active-text {
+  color: #16C098;
+  line-height: normal;
+  letter-spacing: -0.14px;
+  background: transparent;
+  border: none;
+  padding: 0;
+}
+.search-wrap{
+  position: relative;
+}
+.search {
+  width: 216px;
+  height: 38px;
+  border-radius: 10px;
+  background: #F9FBFF;
+  border: none;
+  padding-left: 40px;
+  outline: transparent;
+}
+.search-icon{
+  stroke: #7E7E7E;
+  position: absolute;
+  left: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: none;
+}
+.search::placeholder{
+  color: #B5B7C0;
+  font-size: 12px;
+  line-height: normal;
+  letter-spacing: -0.12px;
+}
+
+/* ---- Table ---- */
+
+.customers-thead th {
+  color: #B5B7C0;
+  padding: 0 10px 14px 0;
+  text-align: left;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.14px;
+  border-bottom: 1px solid #EEE;
+}
+
+.customers-tbody td {
+  color: #292D32;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.14px;
+  padding: 24px 30px 24px 0;
+  border-bottom: 1px solid #EEE;
+}
+
 .status-div {
-  padding: 5px;
-  border-radius: 5px;
-  color: #fff;
-  font-weight: bold;
-  text-align: center;
+  width: 80px;
+  padding: 4px 12px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  border-radius: 4px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.14px;
 }
 
 .status-div.active {
-  background-color: green;
+  border: 1px solid #00B087;
+  background: rgba(22, 192, 152, 0.38);
+  color: #008767;
 }
 
 .status-div.inactive {
-  background-color: red;
+  border: 1px solid #DF0404;
+  background: #FFC5C5;
+  color: #DF0404;
 }
