--- a/css/styles.css
+++ b/css/styles.css
@@ -2,37 +2,37 @@
 :root {
   --color-background: #fafbff;
   --color-black: #000;
-  --color-link: #9197B3;
+  --color-link: #9197b3;
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* --- Fonts--- */
 @font-face {
-  font-family: "Poppins";
-  src: url("fonts/Poppins-Regular.ttf") format("truetype"),
-    url("fonts/Poppins-Regular.woff2") format("woff2");
+  font-family: 'Poppins';
+  src: url('fonts/Poppins-Regular.ttf') format('truetype'),
+    url('fonts/Poppins-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("fonts/Poppins-Medium.ttf") format("truetype"),
-    url("fonts/Poppins-Medium.woff2") format("woff2");
+  font-family: 'Poppins';
+  src: url('fonts/Poppins-Medium.ttf') format('truetype'),
+    url('fonts/Poppins-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("fonts/Poppins-SemiBold.ttf") format("truetype"),
-    url("fonts/Poppins-SemiBold.woff2") format("woff2");
+  font-family: 'Poppins';
+  src: url('fonts/Poppins-SemiBold.ttf') format('truetype'),
+    url('fonts/Poppins-SemiBold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
 }
 /* --- Main styles--- */
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   font-style: normal;
   line-height: normal;
@@ -94,13 +94,12 @@ img {
 
 /* --- Aside--- */
 .aside-container {
-    padding-left: 28px;
-    padding-right: 28px;
-    padding-top: 36px;
-    max-width: 306px;
-    background: #FFF;
-    box-shadow: 0px 10px 60px 0px rgba(226, 236, 249, 0.50);
-
+  padding-left: 28px;
+  padding-right: 28px;
+  padding-top: 36px;
+  max-width: 306px;
+  background: #fff;
+  box-shadow: 0px 10px 60px 0px rgba(226, 236, 249, 0.5);
 }
 
 .logo-link {
@@ -116,101 +115,93 @@ img {
   font-weight: 600;
   line-height: normal;
   letter-spacing: 0.26px;
-  
 }
 
 .version {
-    color: #838383;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.1px;
+  color: #838383;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.1px;
 }
 
 .link-list {
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
-    width: 250px;
-    margin-bottom: 600px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  width: 250px;
+  margin-bottom: 600px;
 }
 
 .link-list-items {
-    padding: 11px;
-}
-
-.link-list-items.active, .link-list-items:hover {
-    border-radius: 8px;
-    background: #5932EA;
 }
 
 .nav-link {
-    display: flex;
-    gap: 14px;
-    align-items: center;
+  display: flex;
+  gap: 14px;
+  align-items: center;
+  padding: 11px;
+  color: var(--color-link);
 }
 
-.main-icons{
-    fill: none;
-    stroke: var(--color-link);
+.nav-link.active,
+.nav-link:hover,
+.nav-link.active svg,
+.nav-link:hover svg {
+  border-radius: 8px;
+  background: #5932ea;
+  color: #fff;
+  stroke: #fff;
 }
-.main-icons.active, .main-icons:hover{
-    fill: none;
-    stroke: #FFF;
+
+.main-icons {
+  fill: none;
+  stroke: var(--color-link);
 }
 
 .nav-text {
-    color: var(--color-link);
-    line-height: normal;
-    letter-spacing: -0.14px;
-    margin-right: auto;
-}
-
-.nav-text.active {
-    color: #fff;
+  line-height: normal;
+  letter-spacing: -0.14px;
+  margin-right: auto;
 }
 
 .arrow-icons {
-    fill: none;
-    stroke: var(--color-link);
-}
-.arrow-icons.active {
-    stroke: #FFF;
+  fill: none;
+  stroke: var(--color-link);
 }
 
 .user {
-    display: flex;
-    gap: 12px;
-    margin-bottom: 78px;
+  display: flex;
+  gap: 12px;
+  margin-bottom: 78px;
 }
 
 .avatar {
-    width: 42px;
+  width: 42px;
 }
 
 .user-wrap {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .user-name {
-    color: #000;
-    line-height: normal;
-    letter-spacing: 0.14px;
+  color: #000;
+  line-height: normal;
+  letter-spacing: 0.14px;
 }
 
 .user-job {
-    color: #757575;
-    font-size: 12px;
-    line-height: normal;
-    letter-spacing: 0.12px;
+  color: #757575;
+  font-size: 12px;
+  line-height: normal;
+  letter-spacing: 0.12px;
 }
-
 
 /* --- Main Container--- */
 
 .main-container {
-  padding-top: 41px ;
+  padding-top: 41px;
 }
 .greetings {
   color: #000;
@@ -220,13 +211,13 @@ img {
 }
 
 .main-wrap {
-  background: #FFF;
-  box-shadow: 0 10px 60px rgba(226,236,249,0.5);
+  background: #fff;
+  box-shadow: 0 10px 60px rgba(226, 236, 249, 0.5);
   border-radius: 26px;
   width: 968px;
   padding: 30px 44px 40px 38px;
 }
-.table-header{
+.table-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -240,42 +231,42 @@ img {
   line-height: normal;
   letter-spacing: -0.22px;
 }
-.table-name-wrap{
+.table-name-wrap {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 7px;
 }
 .active-text {
-  color: #16C098;
+  color: #16c098;
   line-height: normal;
   letter-spacing: -0.14px;
   background: transparent;
   border: none;
   padding: 0;
 }
-.search-wrap{
+.search-wrap {
   position: relative;
 }
 .search {
   width: 216px;
   height: 38px;
   border-radius: 10px;
-  background: #F9FBFF;
+  background: #f9fbff;
   border: none;
   padding-left: 40px;
   outline: transparent;
 }
-.search-icon{
-  stroke: #7E7E7E;
+.search-icon {
+  stroke: #7e7e7e;
   position: absolute;
   left: 8px;
   top: 50%;
   transform: translateY(-50%);
   fill: none;
 }
-.search::placeholder{
-  color: #B5B7C0;
+.search::placeholder {
+  color: #b5b7c0;
   font-size: 12px;
   line-height: normal;
   letter-spacing: -0.12px;
@@ -287,22 +278,22 @@ img {
 }
 
 .customers-thead th {
-  color: #B5B7C0;
+  color: #b5b7c0;
   text-align: left;
   font-weight: 500;
   line-height: normal;
   letter-spacing: -0.14px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #eee;
   padding: 0 52px 14px 0;
 }
 
 .customers-tbody td {
-  color: #292D32;
+  color: #292d32;
   font-weight: 500;
   line-height: normal;
   letter-spacing: -0.14px;
   padding: 24px 30px 24px 0;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #eee;
   text-wrap: nowrap;
 }
 
@@ -319,15 +310,15 @@ img {
 }
 
 .status-div.active {
-  border: 1px solid #00B087;
+  border: 1px solid #00b087;
   background: rgba(22, 192, 152, 0.38);
   color: #008767;
 }
 
 .status-div.inactive {
-  border: 1px solid #DF0404;
-  background: #FFC5C5;
-  color: #DF0404;
+  border: 1px solid #df0404;
+  background: #ffc5c5;
+  color: #df0404;
 }
 
 /* ---- Pagination ---- */
@@ -338,7 +329,7 @@ img {
 }
 
 .pagination-text {
-  color: #B5B7C0;
+  color: #b5b7c0;
   font-weight: 500;
   letter-spacing: -0.14px;
 }
@@ -350,17 +341,17 @@ img {
   align-items: flex-end;
 }
 
-.pagination-item a {
+.pagination-link {
   font-size: 12px;
   line-height: 1;
   letter-spacing: -0.12px;
   text-align: center;
   text-decoration: none;
-  color: #404B52;
+  color: #404b52;
   border-radius: 4px;
   padding: 6px 8px;
-  border: 1px solid #EEE;
-  background: #F5F5F5;
+  border: 1px solid #eee;
+  background: #f5f5f5;
   transition: var(--transition);
   width: 26px;
   height: 24px;
@@ -369,12 +360,12 @@ img {
   justify-content: center;
 }
 
-.pagination-item:hover a,
-.pagination-item:focus a,
+.pagination-link:hover,
+.pagination-link:focus,
 .pagination-link.active {
-    color: #fff;
-    border: 1px solid #5932EA;
-    background: #5932EA;
+  color: #fff;
+  border: 1px solid #5932ea;
+  background: #5932ea;
 }
 
 .pagination-dots {
